@@ -1,5 +1,5 @@
-
-# $Id: makefile.bc,v 1.66 2003/09/10 00:33:37 ronpinkas Exp $
+#
+# $Id: makefile.bc,v 1.67 2003/09/13 20:53:27 walito Exp $
 #
 
 #
@@ -423,7 +423,6 @@ RTL_LIB_OBJS = \
    $(RTL_OBJ_DIR)\substr.obj \
    $(RTL_OBJ_DIR)\teditorl.obj \
    $(RTL_OBJ_DIR)\tone.obj \
-   $(RTL_OBJ_DIR)\tprint.obj \
    $(RTL_OBJ_DIR)\tprinter.obj \
    $(RTL_OBJ_DIR)\trace.obj \
    $(RTL_OBJ_DIR)\transfrm.obj \
@@ -861,8 +860,8 @@ SAMPLES_LIB_OBJS =  \
    $(SAM_OBJ_DIR)\time.obj
 
 ODBC_LIB_OBJS =       \
-      $(OBJ_DIR)\odbc.obj \
-      $(OBJ_DIR)\todbc.obj
+   $(OBJ_DIR)\odbc.obj \
+   $(OBJ_DIR)\todbc.obj
 
 
 #
@@ -2139,9 +2138,6 @@ $(RTL_OBJ_DIR)\tpopup.c : $(RTL_DIR)\tpopup.prg
 
 $(RTL_OBJ_DIR)\tpopup.obj : $(RTL_OBJ_DIR)\tpopup.c
    $(CC) $(CLIBFLAGS) -o$@ $**
-
-$(RTL_OBJ_DIR)\tprint.obj : $(RTL_DIR)\tprint.c
-   $(CC) $(CLIBFLAGS)  -o$@ $**
 
 $(RTL_OBJ_DIR)\tprinter.obj : $(RTL_DIR)\tprinter.c
    $(CC) $(CLIBFLAGS)  -o$@ $**
