@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1570 2003/10/09 05:31:53 paultucker Exp $
+ * $Id: ChangeLog,v 1.1571 2003/10/09 18:52:34 peterrees Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,17 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+
+2003-10-09 16:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+  - source/rtl/tprint.c
+  * makefile.vc
+  * makefile.nt
+  * makefile.bc
+  * hrbdll.bc
+  * hrbdll.vc
+    - source/rtl/tprint.c
+  * source/rtl/set.c
+    * casts, removed unused pfile @ 265
 
 2003-10-10 07:35 GMT+1200 Peter Rees <peter@rees.co.nz>
   * Note: Changes only affect Win32
